build_output_4.log

> Configure project :fabric
Fabric Loom: 1.5.8

> Task :common:compileJava UP-TO-DATE
> Task :common:processResources UP-TO-DATE
> Task :common:classes UP-TO-DATE
> Task :common:jar
> Task :common:downloadMcpConfig
> Task :common:extractSrg UP-TO-DATE
> Task :common:createMcpToSrg UP-TO-DATE
> Task :common:reobfJar
> Task :common:jarJar SKIPPED
> Task :common:reobfJarJar SKIPPED
> Task :common:assemble
> Task :common:compileTestJava NO-SOURCE
> Task :common:processTestResources NO-SOURCE
> Task :common:testClasses UP-TO-DATE
> Task :common:test NO-SOURCE
> Task :common:check UP-TO-DATE
> Task :common:build
> Task :fabric:compileJava UP-TO-DATE
> Task :fabric:processResources UP-TO-DATE
> Task :fabric:classes UP-TO-DATE
> Task :fabric:jar UP-TO-DATE
> Task :fabric:remapJar UP-TO-DATE
> Task :fabric:remapSourcesJar SKIPPED
> Task :fabric:assemble UP-TO-DATE
> Task :fabric:compileTestJava NO-SOURCE
> Task :fabric:processTestResources NO-SOURCE
> Task :fabric:testClasses UP-TO-DATE
> Task :fabric:test NO-SOURCE
> Task :fabric:validateAccessWidener NO-SOURCE
> Task :fabric:check UP-TO-DATE
> Task :fabric:build UP-TO-DATE

> Task :forge:compileJava FAILED
/home/az/project/BusinessCraft/forge/src/main/java/com/quackers29/businesscraft/forge/platform/ForgeRegistryHelper.java:53: error: incompatible types: inference variable I has incompatible bounds
        return ITEMS.register(name, () -> new BlockItem(block.get(), new Item.Properties()));
                             ^
    equality constraints: T
    lower bounds: BlockItem
  where I,T are type-variables:
    I extends Item declared in method <I>register(String,Supplier<? extends I>)
    T extends Item declared in method <T>registerBlockItem(String,Supplier<? extends Block>)
/home/az/project/BusinessCraft/forge/src/main/java/com/quackers29/businesscraft/forge/init/ForgeModMenuTypes.java:32: error: method registerMenuType in class ForgeRegistryHelper cannot be applied to given types;
        registry.registerMenuType("town_interface", TOWN_INTERFACE_MENU);
                ^
  required: String,Supplier<T>
  found:    String,MenuType<TownInterfaceMenu>
  reason: cannot infer type-variable(s) T
    (argument mismatch; MenuType<TownInterfaceMenu> cannot be converted to Supplier<T>)
  where T is a type-variable:
    T extends MenuType<?> declared in method <T>registerMenuType(String,Supplier<T>)
/home/az/project/BusinessCraft/forge/src/main/java/com/quackers29/businesscraft/forge/init/ForgeModMenuTypes.java:37: error: method registerMenuType in class ForgeRegistryHelper cannot be applied to given types;
        registry.registerMenuType("trade_menu", TRADE_MENU);
                ^
  required: String,Supplier<T>
  found:    String,MenuType<TradeMenu>
  reason: cannot infer type-variable(s) T
    (argument mismatch; MenuType<TradeMenu> cannot be converted to Supplier<T>)
  where T is a type-variable:
    T extends MenuType<?> declared in method <T>registerMenuType(String,Supplier<T>)
/home/az/project/BusinessCraft/forge/src/main/java/com/quackers29/businesscraft/forge/init/ForgeModMenuTypes.java:42: error: method registerMenuType in class ForgeRegistryHelper cannot be applied to given types;
        registry.registerMenuType("storage_menu", STORAGE_MENU);
                ^
  required: String,Supplier<T>
  found:    String,MenuType<StorageMenu>
  reason: cannot infer type-variable(s) T
    (argument mismatch; MenuType<StorageMenu> cannot be converted to Supplier<T>)
  where T is a type-variable:
    T extends MenuType<?> declared in method <T>registerMenuType(String,Supplier<T>)
/home/az/project/BusinessCraft/forge/src/main/java/com/quackers29/businesscraft/forge/init/ForgeModMenuTypes.java:47: error: method registerMenuType in class ForgeRegistryHelper cannot be applied to given types;
        registry.registerMenuType("payment_board_menu", PAYMENT_BOARD_MENU);
                ^
  required: String,Supplier<T>
  found:    String,MenuType<PaymentBoardMenu>
  reason: cannot infer type-variable(s) T
    (argument mismatch; MenuType<PaymentBoardMenu> cannot be converted to Supplier<T>)
  where T is a type-variable:
    T extends MenuType<?> declared in method <T>registerMenuType(String,Supplier<T>)
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
5 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':forge:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.8/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 2s
12 actionable tasks: 4 executed, 8 up-to-date
